--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,7 @@ span {
 }
 
 .feedbacks__content .feedbacks__slide {
+  height: 40rem;
   display: flex;
   align-items: center;
   flex-direction: column;
