--- a/css/style.css
+++ b/css/style.css
@@ -410,10 +410,13 @@ span {
   border-radius: 2rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  height: 40rem;
 }
 .portfolio__box img {
   width: 100%;
+  height: 100%;
   transition: 0.5s ease;
+  object-fit: cover;
 }
 .portfolio__box:hover img {
   transform: scale(1.1);
@@ -429,7 +432,7 @@ span {
   color: var(--white-color);
   display: flex;
   align-items: center;
-  text-align: center;
+  text-align: justify;
   flex-direction: column;
   justify-content: center;
   padding: 0 4rem;
@@ -444,7 +447,7 @@ span {
 }
 .portfolio__layer p {
   font-size: 1.6rem;
-  margin: 3rem 0 1rem;
+  margin: 3rem 0 3rem;
 }
 
 .portfolio__layer a {
